--- a/frontend-flask/templates/layout/layout.html
+++ b/frontend-flask/templates/layout/layout.html
@@ -42,6 +42,7 @@
 		</div>
 		<ul>
 			<a href=""><li>Home</li></a>
+			<a href="{{url_for('create_room_page')}}"><li>Make room (Server Host only)</li></a>
 			<a href=""><li></li></a>
 
 			
@@ -75,16 +76,15 @@
 		    </div>
 		
 
-		    {% if sidebar == 'yes' %}
+		    {% if sidebar %}
 		    <div class="col-md-4">
 				<div class="content-section">
-					<h3>Guest</h3>
-					<p class='text-muted'>Please Register or Log in to get more options
+					<h3>Active Rooms</h3>
 						<ul class="list-group">
-							<a class='sidebaritem' href=""><li class="list-group-item list-group-item-light">Login</li></a>
-							<a class='sidebaritem' href=""><li class="list-group-item list-group-item-light">Register</li></a>
+							{% for room in userData[2] %}
+								<a class='sidebaritem' href=""><li class="list-group-item list-group-item-light">{{room.roomName}}</li></a>
+							{% endfor %}
 						</ul>
-					</p>
 				</div>		
 			</div>
 			{% endif %}
