Added rooms page with socketIO. Currently acts as a chat page

--- a/frontend-flask/templates/Home.html
+++ b/frontend-flask/templates/Home.html
@@ -23,7 +23,7 @@
                         <div class="border-top"></div>
                         <div class="form" style="padding-top: 20px">
                             <div class="col-md-auto mb-3">
-                                <input type="hidden" name="mode" value="roomref"/>
+                                <input type="hidden" name="mode" value="userjoin"/>
                                 <button type="submit" class="btn btn-primary">Submit</button>
                             </div>
                         </div>
@@ -36,7 +36,7 @@
                     <div class="form">
                         
                         <div class="col-md-7 mb-1">
-                            <label for="room">Enter the room refrenceID to join the game</label>
+                            <label for="room">Enter the room ID to join the game</label>
                             <input type="text" class="form-control" id="room" name="room_ref" placeholder="JAppleseed" required>
                         </div>
                         <div class="border-top"></div>
