--- a/frontend-flask/templates/room.html
+++ b/frontend-flask/templates/room.html
@@ -16,7 +16,6 @@
             <div class="message_holder"></div>
 
             <form action="" method="POST">
-                <input type="text" class="username" placeholder="User Name"/>
                 <input type="text" class="message" placeholder="Messages"/>
                 <input type="submit"/>
             </form>
@@ -27,27 +26,33 @@
             <script type="text/javascript">
                 var socket = io.connect('http://' + document.domain + ':' + location.port);
                 socket.on( 'connect', function() {
-                    socket.emit( 'chat', {
-                        data: 'User Connected'
-                    } )
+                    
                     var form = $( 'form' ).on( 'submit', function( e ) {
                         e.preventDefault()
-                        let user_name = $( 'input.username' ).val()
                         let user_input = $( 'input.message' ).val()
-                        socket.emit( 'my event', {
-                            user_name : user_name,
+                        socket.emit( 'ActionHappened', {
                             message : user_input
                         } )
                         $( 'input.message' ).val( '' ).focus()
                     } )
                 } )
-                socket.on( 'my response', function( msg ) {
+
+
+
+
+
+                socket.on( 'ActionResponse', function( msg ) {
                     console.log( msg )
                     if( typeof msg.user_name !== 'undefined' ) {
                         $( 'h3' ).remove()
                         $( 'div.message_holder' ).append( '<div><b style="color: #000">'+msg.user_name+'</b> '+msg.message+'</div>' )
                     }
                 })
+
+                socket.on( 'AreYouAlive', function() {
+                    socket.emit( 'IAmAlive')
+                })
+
             </script>
 
             
