--- a/frontend-flask/templates/room.html
+++ b/frontend-flask/templates/room.html
@@ -24,9 +24,30 @@
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
             <script type="text/javascript">
+                function getCookie(cname) {
+                    var name = cname + "=";
+                    var decodedCookie = decodeURIComponent(document.cookie);
+                    var ca = decodedCookie.split(';');
+                    for(var i = 0; i < ca.length; i++) {
+                        var c = ca[i];
+                        while (c.charAt(0) == ' ') {
+                            c = c.substring(1);
+                        }
+                        if (c.indexOf(name) == 0) {
+                            return c.substring(name.length, c.length);
+                        }
+                    }
+                    return "";
+                }
+
                 var socket = io.connect('http://' + document.domain + ':' + location.port);
+
                 socket.on( 'connect', function() {
-                    
+                    var userID = getCookie("userID")
+                    var currentRoom = (window.location.pathname).substr(6);
+                    socket.emit( 'registerToRoom', {
+                        roomID: currentRoom
+                        } )
                     var form = $( 'form' ).on( 'submit', function( e ) {
                         e.preventDefault()
                         let user_input = $( 'input.message' ).val()
@@ -55,7 +76,7 @@
 
             </script>
 
-            
+
 
         </div>
     </section>
