--- a/frontend-flask/templates/layout/layout.html
+++ b/frontend-flask/templates/layout/layout.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->  <!-- using Bootstrap's css as it produces a very nice text layout-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- using 'url_for' to find the css file in case it changes -->
-    <link rel="stylesheet" type="text/css" href=" {{ url_for('static', filename='main.css') }}?version=3.01">
+    <link rel="stylesheet" type="text/css" href=" {{ url_for('static', filename='main.css') }}">
 
 
 	<title>Oxidising Ocelots</title>
