More changes to server, added discreet room supports ie: users in diffrent rooms will not see messages from other users in diffrent rooms

--- a/frontend-flask/templates/Home.html
+++ b/frontend-flask/templates/Home.html
@@ -3,7 +3,9 @@
 
 
 {% block _content_ %}
-<h3>Hi. This is <strike><span style="font:bold;">Exploding Kittens</span></strike> Oxidising Ocelots. This is not a 'card game'</h3>
+<h3>Welcome to <strike><span style="font:bold;">Exploding Kittens</span></strike> Oxidising Ocelots.</h3>
+<h4>This is a turn based battle royale game where players battle each other with <strike> cards</strike> 'interfaces' in heated games.</h4>
+<h5 style="font:bold;" >Get started below!</h5>
 
     <section class="media content-section">
         <div class="media-body">
